Disables software to accelerated canvas update on Linux AMD GPUs

BUG=710029
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2815103003
Cr-Commit-Position: refs/heads/master@{#464560}

Former-commit-id: fd8adbccb52a0baed704df75289567067745ec59