gpu/ipc/common/gpu_command_buffer_traits_multi.h
@@ -127,6 +127,7 @@ IPC_STRUCT_TRAITS_BEGIN(gpu::Capabilities)
   IPC_STRUCT_TRAITS_MEMBER(gpu_rasterization)
   IPC_STRUCT_TRAITS_MEMBER(chromium_image_rgb_emulation)
   IPC_STRUCT_TRAITS_MEMBER(emulate_rgb_buffer_with_rgba)
+  IPC_STRUCT_TRAITS_MEMBER(software_to_accelerated_canvas_upgrade)
   IPC_STRUCT_TRAITS_MEMBER(dc_layers)
 
   IPC_STRUCT_TRAITS_MEMBER(major_version)
